[package]
name = "ashirt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
chrono = "0.4.19"
hmac = "0.12.1"
reqwest = {version = "0.11.9", features = ["json", "blocking"] }
serde = { version = "1.0.136", features = ["derive"] }
sha2 = "0.10.2"
